--- a/EclipseOrion_20170215/index.html
+++ b/EclipseOrion_20170215/index.html
@@ -53,7 +53,7 @@
 </section>
 
 <section>
-  <p>View online at <a href="http://0xdbe.github.io/EclipseOrion_20170215">https://git.io/XXXXX</a></p>
+  <p>View online at <a href="https://0xdbe.github.io/EclipseOrion_20170215">https://git.io/vDPMP</a></p>
   <br/>
   <p>Keyboard Shortcuts</p>
   <small>
@@ -95,6 +95,7 @@
   <aside class="notes">
     <p>- ECD simplifies cloud development</p>
     <p>- Dirigible: cloud development toolkit providing both development tools and runtime environment.</p>
+    <p>- Flux: message based architecture for cloud based developer tooling</p>
   </aside>
 </section>
 
