--- a/ContainerOverview_20161208/index.html
+++ b/ContainerOverview_20161208/index.html
@@ -80,7 +80,7 @@
   <aside class="notes">
     <p>- Cette présentation est disponible sur github</p>
     <p>- Vous pourrez donc la voir et la revoir</p>
-    <p>- Pour ceux qui ne serait pas familiarisé avec Reveal JS, voici les principaux raccourci clavier</p>
+    <p>- Pour ceux qui ne seraient pas familiarisés avec Reveal JS, voici les principaux raccourcis clavier</p>
   </aside>
 </section>
 
