--- a/EclipseOrion_20170215/index.html
+++ b/EclipseOrion_20170215/index.html
@@ -235,6 +235,15 @@
 </section>
 
 <section>
+  <h2>Hosting module</h2>
+  <img src="img/Module_Hosting.png" width="90%">
+  <aside class="notes">
+    <p>- Virtual host</p>
+    <p>- Exemple avec http://www.initializr.com/</p>
+  </aside>
+</section>
+
+<section>
   <h2>Try It on Orion Hub</h2>
   <a href="https://orionhub.org">https://orionhub.org</a>
 </section>
