TLS Cipher Suites v2

--- a/TlsCipherSuites_20170322/index.html
+++ b/TlsCipherSuites_20170322/index.html
@@ -56,7 +56,7 @@
 </section>
 
 <section>
-  <p>View online at <a href="http://0xdbe.github.io/TlsCipherSuites_20170322">https://git.io/XXXXX</a></p>
+  <p>View online at <a href="http://0xdbe.github.io/TlsCipherSuites_20170322">https://git.io/vyp1Q</a></p>
   
   <small>
   <p><b>Keyboard Shortcuts</b></p>
