Container Security Scanner

--- a/ContainerSecurityScanner_20170420/index.html
+++ b/ContainerSecurityScanner_20170420/index.html
@@ -56,7 +56,7 @@
 </section>
 
 <section>
-  <p>View online at <a href="http://0xdbe.github.io/ContainerSecurityScanner_20170420">https://git.io/XXXX</a></p>
+  <p>View online at <a href="http://0xdbe.github.io/ContainerSecurityScanner_20170420">https://git.io/vShrc</a></p>
   
   <small>
   <p><b>Keyboard Shortcuts</b></p>
