--- a/ConferenceSSTIC2017_SumUp/index.html
+++ b/ConferenceSSTIC2017_SumUp/index.html
@@ -53,7 +53,7 @@
     </section>
     
     <section>
-      <p>View online at <a href="http://0xdbe.github.io/ConferenceSSTIC2017">https://git.io/vHFyi</a></p>
+      <p>View online at <a href="https://0xdbe.github.io/ConferenceSSTIC2017_SumUp">https://git.io/vHFSs</a></p>
       <p><b>For this presentation, set the zoom level to 25%</b></p>
       <br><br>
       <p><b>Keyboard Shortcuts</b></p>
