Waterfall to DevOps

--- a/ConferenceSSTIC2017_SumUp/index.html
+++ b/ConferenceSSTIC2017_SumUp/index.html
@@ -42,7 +42,7 @@
 
 <section>
 
-      <section data-state="header1" data-background="img/background.png">
+      <section data-state="header1" data-background="img/background_1024.png">
           <div class="FirstSlides">
             <div class="Title">
               <h1>SSTIC 2017 - Sum up</h1>
