--- a/ModernPresentationRevealJS_20170523/index.html
+++ b/ModernPresentationRevealJS_20170523/index.html
@@ -140,6 +140,7 @@
           { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
         ]
       });
+      Reveal.configure({ slideNumber: 'c/t' });
     </script>
   </body>
 </html>
