--- a/TlsCipherSuites_20170322/index.html
+++ b/TlsCipherSuites_20170322/index.html
@@ -49,7 +49,7 @@
 <div class="FirstSlides">
     <div class="Title">
       <h1>TLS Cipher Suites</h1>
-      <h4>March 22<span class="ordinal">th</span>, 2017</h4>
+      <h4>March 22<span class="ordinal">nd</span>, 2017</h4>
       <p><small>By Didier BERNAUDEAU</small></p>
     </div>
   </div>
