Waterfall_to_DevOps_3

--- a/Waterfall_to_DevOps_20170912/index.html
+++ b/Waterfall_to_DevOps_20170912/index.html
@@ -56,6 +56,34 @@
           </aside>
         </section>
         
+        <section>
+          <p>View online at <a href="https://0xdbe.github.io/Waterfall_to_DevOps_20170912/">https://git.io/v51l0</a></p>
+  
+          <small>
+          <p><b>Keyboard Shortcuts</b></p>
+          <table>
+          <tr>
+            <td><b>Full Screen</b></td>
+            <td>F</td>
+          </tr>
+          <tr>
+            <td><b>Next Slide</b></td>
+            <td>Space bar</td>
+          </tr>
+          <tr>
+            <td><b>Slide Notes</b></td>
+            <td>S</td>
+          </tr>
+          <tr>
+            <td><b>Thumbnail View</b></td>
+            <td>Esc</td>
+          </tr>
+          </table>
+          <br>
+          <p><a href="?print-pdf#/">Print or export to PDF</a></p>
+          </small>
+        </section>
+        
         <section> 
           <h2>Waterfall</h2>
           <p><i>The “traditional” approach</i></p>
