--- a/DevOpsStory_20171221/index.html
+++ b/DevOpsStory_20171221/index.html
@@ -46,7 +46,7 @@
             <div class="Title">
               <h1>DevOps Story</h1>
               <h4>December 21<span class="ordinal">st</span>, 2017</h4>
-              <p><small>By Didier BERNAUDEAU</small></p>
+              <p><small>By Didier BERNAUDEAU @ 42 (School)</small></p>
             </div>
           </div>
           <aside class="notes">
