--- a/AgileSecurity_20180109/index.html
+++ b/AgileSecurity_20180109/index.html
@@ -574,7 +574,7 @@
                 <li>Acceptance testing: Beaker for puppet, Test kitchen for Chef, ...</li>
               </ul>
               <br>
-              <li>Virtual Network (LaaS and FaaS): Neutron from RedHat</li>
+              <li>Network As Code (LaaS and FaaS): Neutron from RedHat</li>
             </ul>
           </section>
           
