--- a/AgileSecurity_20180109/index.html
+++ b/AgileSecurity_20180109/index.html
@@ -478,7 +478,7 @@
               <li>Run the test which should fail.</li>
               <li>Write the minimum amount of code required to make the test pass</li>
               <li>Run the tests to check the new test passes</li>
-              <li>Refactors the new code</li>
+              <li>Refactor the new code</li>
             </ol>
             <br><br>
             <p class="fragment fade-in">Positive testing (Valid data) and <b>Negative testing</b> (Invalid data)</p>
@@ -645,7 +645,7 @@
  
         <section data-background="img/Question.jpg">
             <!--Droit d'auteur: <a href='https://fr.123rf.com/profile_tostphoto'>tostphoto / 123RF Banque d'images</a> -->
-            <h2>Any Question ?</h2>
+            <h2>Any Questions ?</h2>
             <br>
             <span class="fragment fade-in">
               <p>View online at <a href="https://git.io/vNtqD">https://git.io/vNtqD</a></p>
